# Ruse

./: .gitignore  .gitmodules  Cargo.toml  Readme.md  run_benchmarks.sh
Ruse/: Cargo.toml
Ruse/src/: config.rs  main.rs  results.rs  runner.rs
benchmarks/: Cargo.toml
benchmarks/src/: config.rs  main.rs  results.rs  runner.rs  task.rs
benchmarks/tasks/binary_search_tree/: binary_search_tree_delete_two_children.sy  binary_search_tree_delete_two_children_one_example.sy  binary_search_tree_get.sy  binary_search_tree_height.sy  binary_search_tree_unlink_leaf.sy  binary_search_tree_valid.sy
benchmarks/tasks/classes/: binary_search_tree.ts  simple_tree.ts  student.ts  user.ts
benchmarks/tasks/fromDictEnum/benchmarks/mutating/new/: buffer-add.sy
benchmarks/tasks/fromDictEnum/benchmarks/mutating/new/frangel-nocomps/: MaxDouble.sy
benchmarks/tasks/fromDictEnum/benchmarks/mutating/stateCopies/: RemoveMax.sy
benchmarks/tasks/fromDictEnum/benchmarks/non-mutating/Frangel/: UppercaseFirstChar.sy
benchmarks/tasks/fromDictEnum/benchmarks_loopy/loopy/: delimited_string_concat_loopy.sy  get_range_loopy_while.sy  increment_3.sy  int_power_loopy.sy  is_all_positive.sy  is_increasing_loopy.sy  uppercase_first_char_loopy.sy
benchmarks/tasks/fromDictEnum/benchmarks_loopy/loopy_min/: add_numbers_nosplicenopop.sy  increment_2_min.sy  int_power_loopy_min.sy  is_increasing_loopy_min.sy  multivar_min.sy  n_largest_min.sy  reverse_digits_2_min.sy  reverse_digits_2_min_retnum.sy  reverse_digits_3_min.sy  reverse_list_loopy_min.sy  reverse_list_loopy_min_retout.sy  rotate_queue_min_retinp.sy  second_largest_min_retsecondlargest.sy  second_largest_onevar_min_retsecondlargest.sy  uppercase_first_char_loopy_min_retout.sy
benchmarks/tasks/fromDictEnum/benchmarks_loopy/loopy_minex/: fill_fibonacci_loopy_push_min.sy  increment_2_min_retcarry.sy  increment_3_min.sy  multiply_vector_loopy_min.sy  reverse_digits_2_min.sy
benchmarks/tasks/fromDictEnum/benchmarks_maybelater/: strip-numeric-characters-from-cellmodified.sy
benchmarks/tasks/fromDictEnum/benchmarks_maybelater/frangel-comprehensions/: CountNegative.sy  CountUnique.sy  CumulativeSum.sy  FilterStringStart.sy  LargestOddFactor.sy  ListReplaceNull.sy  LongestString.sy  SumPositive.sy
benchmarks/tasks/fromDictEnum/benchmarks_maybelater/loopy/: add_one_min.sy  delimited_string_concat_loopy_min_retout.sy  remove_ith_character_min.sy  reverse_digits_3_min_retnum.sy
benchmarks/tasks/simple/: (++x)+(++y).sy  (++x)+x.sy  arr[0].sy  complex_user.sy  getElementById.sy  seq.sy  set_subtree.sy  user_full_name.sy  user_full_name_1_example.sy  user_full_name_2.sy  user_full_name_with_import.sy  x+y.sy
benchmarks/tasks/timeout/: get-middle-name-from-full-namemodified.sy
benchmarks/website/: config.py  requirements.txt  run.sh
benchmarks/website/app/: __init__.py  benchmarks.py  routes.py
benchmarks/website/app/templates/: base.html  index.html  statistics.html  task.html
docker/: Dockerfile  Dockerfile.sobeq  build.sh
experiments/: experiments.ipynb  helpers.py  run_all_benchmarks_ruse.sh  run_all_frangel_oop_benchmarks.sh  run_experiments.sh  run_regular_benchmarks_ruse.sh  run_relations_benchmarks.sh  run_ruse_embedding_graph_overhead.sh  run_ruse_embedding_overhead.sh  run_ruse_embedding_wide_overhead.sh  run_ruse_location_benchmarks.sh  run_ruse_regular_benchmarks.sh  run_ruse_relations_benchmarks.sh  test_workers_count_chunk_size.ipynb
lib/object_graph/: Cargo.toml
lib/object_graph/benches/: bench_object_graph.rs  benches.rs
lib/object_graph/src/: cache.rs  connected_components.rs  dot.rs  generator.rs  graph.rs  graph_equality.rs  graph_id_generator.rs  graph_map_value.rs  graph_node.rs  graph_walk.rs  graphs_map.rs  indices.rs  lib.rs  location.rs  mermaid.rs  node_index.rs  object_data.rs  primitive_fields.rs  string_types.rs  test.rs  tests.rs  value.rs  value_type.rs
lib/object_graph/src/tests/: graphs_tests.rs  value_tests.rs
lib/prog_bank_in_mem/: Cargo.toml
lib/prog_bank_in_mem/src/: args.rs  config.rs  lib.rs  subsumption_bank.rs  test.rs
lib/synthesizer/: Cargo.toml
lib/synthesizer/benches/: bench_iterators.rs  bench_misc.rs  bench_multithreaded.rs  benches.rs
lib/synthesizer/src/: arg_iter.rs  bank.rs  bank_hasher.rs  bank_iterator.rs  children_iter.rs  context.rs  embedding.rs  iterator.rs  lib.rs  location.rs  multi_programs_map_product.rs  opcode.rs  partial_context.rs  prog.rs  prog_triple.rs  prog_triplet.rs  prog_triplet_iterator.rs  subsumption_bank.rs  synthesizer.rs  synthesizer_context.rs  test.rs  value.rs  value_array.rs  work_gatherer.rs
lib/synthesizer/src/iterator/: bank_iterator.rs  iterations_iterator.rs  multi_programs_map_product.rs  prog_triple_iterator.rs  prog_triplet_iterator.rs  seq_triple.rs  seq_triple_iterator.rs  test.rs
lib/task_parser/: Cargo.toml
lib/task_parser/src/: bank_factory.rs  error.rs  json_parsing_utils.rs  lib.rs  predicate_builder.rs  task.rs  task_type.rs  var_ref.rs
lib/ts_interpreter/: Cargo.toml
lib/ts_interpreter/benches/: bench_misc.rs  bench_multithreaded.rs
lib/ts_interpreter/src/: dom.rs  dts_visitor.rs  engine_context.rs  js_console_logger.rs  js_errors.rs  js_evaluator.rs  js_object_value.rs  js_object_wrapper.rs  js_value.rs  js_worker_context.rs  js_wrapped.rs  jsbuiltins.rs  lib.rs  opcode.rs  program_visitor.rs  test.rs  ts_array_class.rs  ts_class.rs  ts_classes.rs  ts_global_class.rs  ts_user_class.rs
lib/ts_interpreter/src/jsbuiltins/: jsarray.rs  jsiterator.rs  jsmap.rs
lib/ts_interpreter/src/opcode/: array_ops.rs  assign_op.rs  bin.rs  dom_ops.rs  function.rs  ident.rs  lit.rs  member.rs  sequence.rs  set_ops.rs  string_ops.rs  unary.rs
lib/ts_interpreter/tests/: binary_search_tree_class_tests.rs  binary_tree_tests.rs
lib/ts_synthesizer/: Cargo.toml
lib/ts_synthesizer/benches/: bench_simple.rs  benches.rs
lib/ts_synthesizer/src/: lib.rs  opcode_list.rs  test.rs  ts_synthesizer.rs
log_viewer/: README.md  __init__.py  log_parser.py  log_viewer.py  package-lock.json  package.json  (+10 more)
ruse/: Cargo.toml
ruse/src/: main.rs
(+1520 files in other folders)
