[workspace]
members = ["lib/*", "benchmarks"]
resolver = "2"

[workspace.dependencies]
clap = { version = "*", features = ["derive"] }

hstr = "*"

byteview = "*"

union-find = "*"

tracing = { version = "*", features = ["release_max_level_trace"] }
tracing-subscriber = { version = "*", features = ["json"] }

ruse_object_graph = { path = "./lib/object_graph" }
ruse_ts_interpreter = { path = "./lib/ts_interpreter" }
ruse_synthesizer = { path = "./lib/synthesizer" }
ruse_ts_synthesizer = { path = "./lib/ts_synthesizer" }
ruse_task_parser = { path = "./lib/task_parser" }
ruse_prog_bank_in_mem = { path = "./lib/prog_bank_in_mem" }

num-traits = "*"

swc = "*"
swc_common = { version = "*", features = ["tty-emitter"] }
swc_ecma_codegen = "*"
swc_ecma_parser = "*"
swc_ecma_ast = "*"
swc_ecma_transforms = { version = "*", features = ["typescript", "optimization", "module"] }
swc_ecma_minifier = "*"
swc_ecma_visit = "*"
swc_typescript = "*"
swc_compiler_base = "*" 
swc_ecma_utils = "*"

boa_ast = "*"
boa_engine = "*"
boa_gc = "*"
boa_runtime = "*"

itertools = "*"

anyhow = "*"

html_parser = "*"

tokio = { version = "^1.43.0", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
    "signal",
] }
tokio-util = "*"
futures = "*"

serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_with = "*"

walkdir = "*"
wildmatch = "*"

dashmap = { version = "*", features = ["raw-api"] }
siphasher = { version = "*" }
getrandom = { version = "*" }
rand = "^0.8.5"

downcast-rs = "*"

criterion = { version = "*", features = ["async_tokio"] }

[patch.crates-io]
union-find = { git = "https://github.com/DaAnIV/union-find-rs.git" }

[profile.release]
lto = "thin"

[profile.bench]
debug = true
strip = false

[profile.profiling]
inherits = "release"
debug = true
