[package]
name = "Ruse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = { version = "*", features = ["v3"] }

fork = "*"

ruse_object_graph.workspace = true
ruse_ts_interpreter.workspace = true
ruse_synthesizer.workspace = true
ruse_ts_synthesizer.workspace = true
ruse_task_parser.workspace = true
ruse_prog_bank_in_mem.workspace = true

clap.workspace = true
clap-verbosity-flag = "*"

anyhow.workspace = true

tracing.workspace = true
tracing-subscriber = { version = "*", features = ["json"] }
tracing-log = { version = "*" }

wildmatch.workspace = true

chrono = "*"
sysinfo = { version = "*", default-features = false, features = [
    "serde",
    "system",
] }
walkdir.workspace = true
itertools.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true

ctrlc = "*"
procfs = "*"
byte-unit = { version = "*", features = ["serde"] }

crossbeam-channel = "*"

tokio.workspace = true
tokio-util.workspace = true

console-subscriber = "*"

boa_engine.workspace = true

[features]
trace_evaluations=["ruse_synthesizer/trace_evaluations"]
trace_embeddings=["ruse_synthesizer/trace_embeddings"]
prune_graph_map=["ruse_synthesizer/prune_graph_map"]

release_trace_max_level_info=["tracing/release_max_level_info", 
                              "ruse_object_graph/release_trace_max_level_info",
                              "ruse_ts_interpreter/release_trace_max_level_info",
                              "ruse_synthesizer/release_trace_max_level_info",
                              "ruse_ts_synthesizer/release_trace_max_level_info",
                              "ruse_task_parser/release_trace_max_level_info",
                              "ruse_prog_bank_in_mem/release_trace_max_level_info"]
