[package]
name = "ruse_benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "*", features = ["profiling"] }

ruse_object_graph = { path = "../lib/object_graph" }
ruse_ts_interpreter = { path = "../lib/ts_interpreter" }
ruse_synthesizer = { path = "../lib/synthesizer" }
ruse_ts_synthesizer = { path = "../lib/ts_synthesizer" }

clap = { version = "*", features = ["derive"] }
chrono = "*"
sysinfo = { version = "*", default-features = false, features = ["serde"] }
walkdir = "*"

serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_with = "*"

tokio = { version = "*", features = [
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
] }
tokio-util = "*"
console-subscriber = "*"
