[package]
name = "ruse_benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "*", features = ["profiling"] }

ruse_object_graph.workspace = true
ruse_ts_interpreter.workspace = true
ruse_synthesizer.workspace = true
ruse_ts_synthesizer.workspace = true
ruse_task_parser.workspace = true

clap = { version = "*", features = ["derive"] }
clap-verbosity-flag = "*"

tracing.workspace = true
tracing-subscriber = { version = "*", features = ["json"] }
tracing-log = { version = "*" }

wildmatch = "*"

chrono = "*"
sysinfo = { version = "*", default-features = false, features = [
    "serde",
    "system",
] }
walkdir = "*"
itertools = "*"

serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_with = "*"

procfs = "*"
byte-unit = { version = "*", features = ["serde"] }

tokio = { version = "*", features = [
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
] }
tokio-util = "*"
console-subscriber = "*"

boa_engine.workspace = true
