[package]
name = "ruse"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "*"
ruse_object_graph = { path = "../lib/object_graph" }
ruse_ts_interpreter = { path = "../lib/ts_interpreter" }
ruse_synthesizer = { path = "../lib/synthesizer" }
ruse_ts_synthesizer = { path = "../lib/ts_synthesizer" }
tokio = {version = "*", features = ["rt-multi-thread", "sync", "time", "macros"]}

swc = "*"
swc_common = {version = "*", features = ["tty-emitter"]}
swc_ecma_parser = "*"
swc_ecma_ast = "*"
swc_visit = "*"