[package]
name = "ruse_object_graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.8.5"
dashmap = { version = "*" }
bitcode = { version = "*", features = ["derive"] }
petgraph = { version = "^0.6.5", optional = true }
petgraph-gen = { version = "0.1.3", optional = true }

[dev-dependencies]
criterion = "*"

[features]
default = ["generators"]
generators = ["dep:petgraph", "dep:petgraph-gen"]

[[bench]]
name = "benches"
required-features = ["generators"]
harness = false
