[package]
name = "ruse_object_graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand.workspace = true
dashmap.workspace = true
bitcode.workspace = true

petgraph = { version = "^0.6.5", optional = true }
petgraph-gen = { version = "0.1.3", optional = true }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }

[features]
default = ["generators"]
generators = ["dep:petgraph", "dep:petgraph-gen"]

[[bench]]
name = "benches"
required-features = ["generators"]
harness = false
