[package]
name = "ruse_prog_bank_in_mem"
version = "0.1.0"
edition = "2021"

[dependencies]
ruse_object_graph.workspace = true
ruse_synthesizer.workspace = true

clap.workspace = true

anyhow.workspace = true

serde.workspace = true
itertools.workspace = true

tracing.workspace = true
siphasher.workspace = true
getrandom.workspace = true
rand.workspace = true

serde_json.workspace = true

[features]

[dev-dependencies]
criterion.workspace = true
