[package]
name = "ruse_synthesizer"
version = "0.1.0"
edition = "2021"

[dependencies]
ruse_object_graph = { path = "../object_graph" }

serde = "*"
dashmap = { version = "*", features = ["raw-api"] }
hashbrown = { version = "*", features = ["raw"], default-features = false }
tokio = { version = "*", features = ["rt", "macros"] }
tokio-util = "*"
itertools = "*"
rand = { version = "*", optional = true }

tracing = { version = "*" }

[features]
default = ["test_helpers"]
test_helpers = ["dep:rand"]

[dev-dependencies]
criterion = "*"

[[bench]]
name = "benches"
harness = false
