[package]
name = "ruse_synthesizer"
version = "0.1.0"
edition = "2021"

[dependencies]
ruse_object_graph.workspace = true

serde = "*"
dashmap = { version = "*", features = ["raw-api"] }
hashbrown = { version = "*", features = ["raw"], default-features = false }
tokio = { version = "*", features = ["rt", "macros"] }
tokio-util = "*"
itertools = "*"
downcast-rs = "*"
rand = { version = "*", optional = true }
tracing-subscriber = { version = "*", optional = true }

tracing.workspace = true

[features]
default = ["test_helpers"]
test_helpers = ["dep:rand", "dep:tracing-subscriber"]
trace_evaluations = []
trace_embeddings = []

[dev-dependencies]
criterion = "*"

[[bench]]
name = "benches"
harness = false
