[package]
name = "ruse_synthesizer"
version = "0.1.0"
edition = "2021"

[dependencies]
ruse_object_graph.workspace = true

serde.workspace = true
dashmap.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-util.workspace = true
itertools.workspace = true
downcast-rs.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true

tracing.workspace = true
siphasher.workspace = true
getrandom.workspace = true
rand.workspace = true

[features]
default = ["test_helpers"]
test_helpers = []
trace_evaluations = []
trace_embeddings = []

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "benches"
harness = false
