[package]
name = "ruse_task_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
ruse_object_graph.workspace = true
ruse_synthesizer.workspace = true
ruse_ts_interpreter.workspace = true
ruse_ts_synthesizer.workspace = true
ruse_prog_bank_in_mem.workspace = true

anyhow.workspace = true

itertools.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true

wildmatch.workspace = true

boa_engine.workspace = true

tracing.workspace = true

[features]
release_trace_max_level_info = ["tracing/release_max_level_info"]
release_trace_max_level_debug = ["tracing/release_max_level_debug"]
