[package]
name = "ruse_ts_interpreter"
version = "0.1.0"
edition = "2021"

[dependencies]
ruse_object_graph.workspace = true
ruse_synthesizer.workspace = true

dashmap = "*"

swc = "*"
swc_common = {version = "*", features = ["tty-emitter"]}
swc_ecma_codegen = "*"
swc_ecma_parser = "*"
swc_ecma_ast = "*"
anyhow = "*"
itertools = "*"

html_parser = "*"

boa_engine = "*"
boa_gc = "*"

[dev-dependencies]
criterion = "*"
