[package]
name = "ruse_ts_interpreter"
version = "0.1.0"
edition = "2021"

[dependencies]
ruse_object_graph.workspace = true
ruse_synthesizer.workspace = true

dashmap.workspace = true

swc.workspace = true
swc_common.workspace = true
swc_ecma_codegen.workspace = true
swc_ecma_parser.workspace = true
swc_ecma_ast.workspace = true

anyhow.workspace = true
itertools.workspace = true

html_parser.workspace = true

boa_engine.workspace = true

tracing.workspace = true

[dev-dependencies]
criterion.workspace = true

[features]
default = ["test_helpers"]
test_helpers = []
