[package]
name = "ruse_ts_interpreter"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json.workspace = true

ruse_object_graph.workspace = true
ruse_synthesizer.workspace = true

dashmap.workspace = true

swc.workspace = true
swc_common.workspace = true
swc_ecma_codegen.workspace = true
swc_ecma_parser.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_transforms.workspace = true
swc_ecma_minifier.workspace = true
swc_ecma_visit.workspace = true
swc_typescript.workspace = true
swc_compiler_base.workspace = true
swc_ecma_utils.workspace = true

anyhow.workspace = true
itertools.workspace = true

html_parser.workspace = true

boa_engine.workspace = true
boa_runtime.workspace = true
boa_gc.workspace = true

tracing.workspace = true

num-traits.workspace = true

walkdir.workspace = true

[dev-dependencies]
criterion.workspace = true
ruse_task_parser.workspace = true

[features]
default = ["test_helpers"]
test_helpers = []
release_trace_max_level_info = ["tracing/release_max_level_info"]
release_trace_max_level_debug = ["tracing/release_max_level_debug"]
