[package]
name = "ruse_ts_synthesizer"
version = "0.1.0"
edition = "2021"

[dependencies]
ruse_object_graph = { path = "../object_graph" }
ruse_synthesizer = { path = "../synthesizer" }
ruse_ts_interpreter = { path = "../ts_interpreter" }

swc_ecma_ast = "*"

tokio-util = "*"

[dev-dependencies]
criterion = { version = "*", features = ["async_tokio"] }
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "benches"
harness = false
