[package]
name = "ruse_ts_synthesizer"
version = "0.1.0"
edition = "2021"

[dependencies]
ruse_object_graph.workspace = true
ruse_synthesizer.workspace = true
ruse_ts_interpreter.workspace = true

anyhow.workspace = true

itertools.workspace = true

swc_ecma_ast.workspace = true

tokio-util.workspace = true

tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
tokio.workspace = true
ruse_bank_in_mem.workspace = true

[[bench]]
name = "benches"
harness = false

[features]
release_trace_max_level_info = ["tracing/release_max_level_info"]
release_trace_max_level_debug = ["tracing/release_max_level_debug"]
